@@ -78,6 +78,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug: allow empty [upper|lower]_limit even without autoscaling
 -bug: Availability method Ping or SNMP generates meaningless warnings
 -bug: Warning in lib/snmp.php by misspelled variable
+-bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
 -documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
